// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`seedPhrase component matches the snapshot with checkbox checked 1`] = `
<Container>
  <Block
    flex={0.1}
  >
    <Landing00
      height={80}
      width={80}
    />
  </Block>
  <Block
    flex={0.1}
  >
    <CenteredText
      msg="Your secure phrase is:"
      style={
        Object {
          "color": "#ffefdf",
          "fontSize": 20,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <CenteredText
      msg="mock seedPhrase"
      style={
        Object {
          "color": "#ffefdf",
          "fontSize": 20,
        }
      }
    />
  </Block>
  <Block
    flex={0.2}
  >
    <CenteredText
      msg="IMPORTANT 
 Write these words down on an analog andsecure place. Store it in at least two different places.Without these words you cannot access your wallet again.Anyone with these words can get access to your wallet. Taking a screenshot is not secure."
      style={
        Object {
          "color": "#ffefdf",
          "fontSize": 20,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Checkbox
      checked={true}
      checkedIcon="radio-button-checked"
      disabled={false}
      label="Yes, I have securely written down my phrase."
      onCheck={[Function]}
      size={24}
      style={
        Object {
          "icon": Object {
            "color": "#ffefdf",
          },
          "label": Object {
            "color": "#942f51",
            "fontSize": 20,
            "marginLeft": -5,
            "padding": 0,
            "position": "relative",
            "textAlign": "left",
          },
        }
      }
      uncheckedIcon="radio-button-unchecked"
      value=""
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={false}
      icon={null}
      onLongPress={null}
      onPress={null}
      primary={true}
      raised={true}
      style={Object {}}
      testID={null}
      text="NEXT STEP"
      upperCase={true}
    />
  </Block>
</Container>
`;

exports[`seedPhrase component matches the snapshot with checkbox unchecked 1`] = `
<Container>
  <Block
    flex={0.1}
  >
    <Landing00
      height={80}
      width={80}
    />
  </Block>
  <Block
    flex={0.1}
  >
    <CenteredText
      msg="Your secure phrase is:"
      style={
        Object {
          "color": "#ffefdf",
          "fontSize": 20,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <CenteredText
      msg="mock seedPhrase"
      style={
        Object {
          "color": "#ffefdf",
          "fontSize": 20,
        }
      }
    />
  </Block>
  <Block
    flex={0.2}
  >
    <CenteredText
      msg="IMPORTANT 
 Write these words down on an analog andsecure place. Store it in at least two different places.Without these words you cannot access your wallet again.Anyone with these words can get access to your wallet. Taking a screenshot is not secure."
      style={
        Object {
          "color": "#ffefdf",
          "fontSize": 20,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Checkbox
      checked={false}
      checkedIcon="radio-button-checked"
      disabled={false}
      label="Yes, I have securely written down my phrase."
      onCheck={[Function]}
      size={24}
      style={
        Object {
          "icon": Object {
            "color": "#ffefdf",
          },
          "label": Object {
            "color": "#942f51",
            "fontSize": 20,
            "marginLeft": -5,
            "padding": 0,
            "position": "relative",
            "textAlign": "left",
          },
        }
      }
      uncheckedIcon="radio-button-unchecked"
      value=""
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={null}
      primary={true}
      raised={true}
      style={Object {}}
      testID={null}
      text="NEXT STEP"
      upperCase={true}
    />
  </Block>
</Container>
`;
